Add jSpecify node.settings.ca package.